fixed alignment issue

--- a/src/Component/ProgressBar/ProgressBar.scss
+++ b/src/Component/ProgressBar/ProgressBar.scss
@@ -20,14 +20,15 @@
       height: 20%;
       padding: 14px;
       align-items: center;
+      margin-bottom: 12px;
       .progress-bar__heading {
         display: flex;
       }
       .progress-bar__sub__heading {
         margin-right: 13px;
         display: flex;
-        // margin-top: 24px;
         color: blue;
+        margin-top: 12px;
       }
     }
     .progress-bar__middle-section {
@@ -38,6 +39,7 @@
       //   padding: 14px;
       align-items: center;
       padding-top: 0px;
+      margin-bottom: 9px;
       .progress-bar__middle-section__heading {
         display: flex;
         font-weight: bold;
